tests/fixtures/invalid/bytes_div_dict.py
# Cannot divide Bytes and Dict[str, int]
x: float = b"hello" / {"a": 1}
